Handling IOException in-side the toJSON method with try catch.
Change-Id: I132e7574bbc524f3a371354a027b472cbf88707f
(cherry picked from commit 23c36930f9adb71576624801b6c901fa52bfdf32)

--- a/wavemaker-commons-util/src/main/resources/i18n/wm/de.json
+++ b/wavemaker-commons-util/src/main/resources/i18n/wm/de.json
@@ -67,5 +67,6 @@
   "com.wavemaker.unAuthorized" : "User not authenticated",
   "com.wavemaker.userAlreadyConfirmed" : "User ${0} is already confirmed.",
   "com.wavemaker.userAlreadyLoggedOut" : "User already logged out",
-  "com.wavemaker.usernameAlreadyExists" : "There is already an account registered with the given username: ${0}"
+  "com.wavemaker.usernameAlreadyExists" : "There is already an account registered with the given username: ${0}",
+  "com.wavemaker.commons.objToJsonConversionFailed" : "Failed to convert object to json "
 }
