--- a/wavemaker-commons-util/src/main/resources/i18n/wm/de.json
+++ b/wavemaker-commons-util/src/main/resources/i18n/wm/de.json
@@ -20,8 +20,13 @@
   "com.wavemaker.commons.file.not.found" : "The file ${0} does not exist",
   "com.wavemaker.commons.folder.clean.error" : "Failed to clean folder ${0}",
   "com.wavemaker.commons.getter.method.not.found" : "Getter method not found for propertyName ${0}, in class ${1}",
+  "com.wavemaker.commons.identifier.hql":"{0} steht in Hql-Schlüsselwörtern",
+  "com.wavemaker.commons.identifier.javaPackage":"{0} befindet sich im Java-Paket",
+  "com.wavemaker.commons.identifier.notJavaIdentifier":"{0} ist kein gültiger JavaIdentifier",
   "com.wavemaker.commons.invalid.property" : "${0} does not have a property ${1}",
+  "com.wavemaker.commons.invalid.packageName":"Paketname darf nicht null oder leer sein",
   "com.wavemaker.commons.invalid.request.url" : "Invalid request URL",
+  "com.wavemaker.commons.invalid.identifier":"Der Bezeichner darf nicht null oder leer sein",
   "com.wavemaker.commons.json$InvalidJsonObject" : "Falsches Json-Objekt {0}",
   "com.wavemaker.commons.json$InvalidObject" : "Ungültige Objekt {0} {1}",
   "com.wavemaker.commons.json$MessageNotReadable" : "Nachricht nicht lesbar",
