--- a/wavemaker-commons-util/src/main/resources/i18n/wm/en.json
+++ b/wavemaker-commons-util/src/main/resources/i18n/wm/en.json
@@ -20,9 +20,9 @@
   "com.wavemaker.commons.file.not.found":"The file ${0} does not exist",
   "com.wavemaker.commons.folder.clean.error":"Failed to clean folder ${0}",
   "com.wavemaker.commons.getter.method.not.found":"Getter method not found for propertyName ${0}, in class ${1}",
-  "com.wavemaker.commons.identifier.hql":"${0} is in Hql keywords",
-  "com.wavemaker.commons.identifier.javaPackage":"${0} is in Java package",
-  "com.wavemaker.commons.identifier.notJavaIdentifier":"${0} is not a JavaIdentifier",
+  "com.wavemaker.commons.identifier.hql":"{0} is in Hql keywords",
+  "com.wavemaker.commons.identifier.javaPackage":"{0} is in Java package",
+  "com.wavemaker.commons.identifier.notJavaIdentifier":"{0} is not a valid JavaIdentifier",
   "com.wavemaker.commons.invalid.property":"${0} does not have a property ${1}",
   "com.wavemaker.commons.invalid.packageName":"packageName can not be null or empty",
   "com.wavemaker.commons.invalid.request.url":"Invalid request URL",
