WMS-18183: changing to relevant message
Change-Id: I4a51e0981c1885e00b20aec76d6c3e62f3617dee

--- a/wavemaker-commons-util/src/main/resources/i18n/wm/de.json
+++ b/wavemaker-commons-util/src/main/resources/i18n/wm/de.json
@@ -70,7 +70,7 @@
   "com.wavemaker.invalidToken" : "Invalid Token: ${0}",
   "com.wavemaker.noUserWithEmail" : "No user exists with the email ${0}",
   "com.wavemaker.resourceDNEWithId" : "Resource ${0} does not exist with id ${1}",
-  "com.wavemaker.unAuthorized" : "User not authenticated",
+  "com.wavemaker.unAuthorized" : "nicht autorisiert",
   "com.wavemaker.userAlreadyConfirmed" : "User ${0} is already confirmed.",
   "com.wavemaker.userAlreadyLoggedOut" : "User already logged out",
   "com.wavemaker.usernameAlreadyExists" : "There is already an account registered with the given username: ${0}",
