WMS-22464 Fixed issues in prefab, themes customization. Also fixed states when auto resolved by vcs with ours/theirs and handled cases when conflicted files are updated by some other merge action without user explicitly marking it as resolved.

--- a/wavemaker-commons-util/src/main/resources/i18n/wm/de.json
+++ b/wavemaker-commons-util/src/main/resources/i18n/wm/de.json
@@ -54,25 +54,26 @@
   "com.wavemaker.common.resource.exists": "Unable to create file. File already exists ${0}",
   "com.wavemaker.commons.unable.to.create.folder" : "Unable to create folder ${0}",
   "com.wavemaker.commons.unable.to.delete.file" : "Unable to delete ${0}",
-  "com.wavemaker.commons.unsupported.object.type" : "obj of type ${0} not supported by this method",
-  "com.wavemaker.commons.util$FileUtils_PathDNE" : "Pfad {0} existiert nicht",
-  "com.wavemaker.commons.util$FileUtils_PathNotDir" : "Projektpfad {0} ist kein Verzeichnis",
-  "com.wavemaker.commons.util$FileUtils_ReachedRoot" : "Erreicht Dateisystem root {0} ohne Befund root: {1}",
-  "com.wavemaker.commons.util$NullClass" : "Parameter-Klasse war null",
-  "com.wavemaker.commons.util$SemaphoreAcquisitionTimeout" : "Systeem is nu bezig, probeer het later opnieuw",
-  "com.wavemaker.commons.xml.parse.error" : "Failed to parse xml file",
-  "com.wavemaker.deployment$IdCouldNotBeNull" : " Deployment Id could not be null or empty",
-  "com.wavemaker.deployment$IdDoesNotExist" : " Deployment Info with Deployment Id ${0} does not exist",
-  "com.wavemaker.emailAlreadyExists" : "There is already an account registered with the given email: ${0}",
-  "com.wavemaker.emptyWavemakerCloudAccountDetails" : "User WaveMakerCloud account details has an empty username or password",
-  "com.wavemaker.failedToAuthenticate" : "Failed to authenticate",
-  "com.wavemaker.invalidCredentials" : "Invalid credentials",
-  "com.wavemaker.invalidToken" : "Invalid Token: ${0}",
-  "com.wavemaker.noUserWithEmail" : "No user exists with the email ${0}",
-  "com.wavemaker.resourceDNEWithId" : "Resource ${0} does not exist with id ${1}",
-  "com.wavemaker.unAuthorized" : "nicht autorisiert",
-  "com.wavemaker.userAlreadyConfirmed" : "User ${0} is already confirmed.",
-  "com.wavemaker.userAlreadyLoggedOut" : "User already logged out",
-  "com.wavemaker.usernameAlreadyExists" : "There is already an account registered with the given username: ${0}",
-  "com.wavemaker.commons.objToJsonConversionFailed" : "Failed to convert object to json "
+  "com.wavemaker.commons.unsupported.object.type": "obj of type ${0} not supported by this method",
+  "com.wavemaker.commons.util$FileUtils_PathDNE": "Pfad {0} existiert nicht",
+  "com.wavemaker.commons.util$FileUtils_PathNotDir": "Projektpfad {0} ist kein Verzeichnis",
+  "com.wavemaker.commons.util$FileUtils_ReachedRoot": "Erreicht Dateisystem root {0} ohne Befund root: {1}",
+  "com.wavemaker.commons.util$NullClass": "Parameter-Klasse war null",
+  "com.wavemaker.commons.util$SemaphoreAcquisitionTimeout": "Systeem is nu bezig, probeer het later opnieuw",
+  "com.wavemaker.commons.xml.parse.error": "Failed to parse xml file",
+  "com.wavemaker.deployment$IdCouldNotBeNull": " Deployment Id could not be null or empty",
+  "com.wavemaker.deployment$IdDoesNotExist": " Deployment Info with Deployment Id ${0} does not exist",
+  "com.wavemaker.emailAlreadyExists": "There is already an account registered with the given email: ${0}",
+  "com.wavemaker.emptyWavemakerCloudAccountDetails": "User WaveMakerCloud account details has an empty username or password",
+  "com.wavemaker.failedToAuthenticate": "Failed to authenticate",
+  "com.wavemaker.invalidCredentials": "Invalid credentials",
+  "com.wavemaker.invalidToken": "Invalid Token: ${0}",
+  "com.wavemaker.noUserWithEmail": "No user exists with the email ${0}",
+  "com.wavemaker.resourceDNEWithId": "Resource ${0} does not exist with id ${1}",
+  "com.wavemaker.unAuthorized": "nicht autorisiert",
+  "com.wavemaker.userAlreadyConfirmed": "User ${0} is already confirmed.",
+  "com.wavemaker.userAlreadyLoggedOut": "User already logged out",
+  "com.wavemaker.usernameAlreadyExists": "There is already an account registered with the given username: ${0}",
+  "com.wavemaker.commons.objToJsonConversionFailed": "Failed to convert object to json ",
+  "com.wavemaker.validation.failed": "{0}"
 }
