WMS-26424 Fixed tests in wavemaker-commons-util

--- a/wavemaker-commons-util/src/main/resources/i18n/wm/en.json
+++ b/wavemaker-commons-util/src/main/resources/i18n/wm/en.json
@@ -44,16 +44,16 @@
   "com.wavemaker.commons.properties.inputStream.read.failure":"Failed to read properties input stream",
   "com.wavemaker.commons.read.only.resource":"The resource ${0} is read-only",
   "com.wavemaker.commons.readOnly.zip.file":"The Zip File ${0} is read-only",
-  "com.wavemaker.commons.resource.does.not.exist":"The resource ${0} does not exist",
-  "com.wavemaker.commons.resource.does.not.exist.in.the.folder":"The resource ${0} does not exist in the folder ${1}",
+  "com.wavemaker.commons.resource.does.not.exist":"The resource ''{0}'' does not exist",
+  "com.wavemaker.commons.resource.does.not.exist.in.the.folder":"The resource ''{0}'' does not exist in the folder ''{1}''",
   "com.wavemaker.commons.ssl.context.init.failed":"Failed in initialize ssl context",
   "com.wavemaker.commons.string.to.date.parse.failure":"Failed to parse the string ${0} as ${1}",
   "com.wavemaker.commons.unable.to,rename.file":"Unable to rename file ''{0}'' to ''{1}''",
-  "com.wavemaker.commons.unable.to.access.resource":"Unable to access resource ${0} as ${1} due to existing resource",
+  "com.wavemaker.commons.unable.to.access.resource":"Unable to access resource ''{0}'' as {1} due to existing resource",
   "com.wavemaker.commons.unable.to.create.file":"Unable to create file ${0}",
   "com.wavemaker.common.resource.exists": "Unable to create file. File already exists ${0}",
   "com.wavemaker.commons.unable.to.create.folder":"Unable to create folder ${0}",
-  "com.wavemaker.commons.unable.to.delete.file":"Unable to delete ${0}",
+  "com.wavemaker.commons.unable.to.delete.file":"Unable to delete ''{0}''",
   "com.wavemaker.commons.unsupported.object.type": "obj of type ${0} not supported by this method",
   "com.wavemaker.commons.util$FileUtils_PathDNE": "path ${0} does not exist",
   "com.wavemaker.commons.util$FileUtils_PathNotDir": "Project path ${0} is not a directory",
